--- a/VRChat/69/1266869.html
+++ b/VRChat/69/1266869.html
@@ -71,49 +71,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "RNNXDLSoSNoQoEtRjubE8FCUYTcmUNwv+GED1nhtVfY="></script>
+    "Bhw73e/L8sYy/plWGNfHK9D/5+Hpn83yxTJBmuH8Pb8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルアバター「あおい」","description":"オリジナルアバター「あおい」 紹介文\n\n□□オリジナルアバター「あおい」□□\n\n本モデルはVRChatでの使用を想定して制作されています。\n\n・ポリゴン数: 23855△\n・ OVRLipsync: 15種類\n・ BlendShape: 54種類\n・ アニメーションオーバーライド設定済み 2種\n・リップシンク、アイトラッキング対応\n・arktoon-shaders 設定済\n・VRC SDK 設定済\n\n□同梱データ□\n\n・3Dモデルfbxデータ\n\naoi.fbx: モデル本体\nmegane.fbx: メガネ\n\n・テクスチャpngデータ\n\nモデル用テクスチャ\nhead.png\nhair.png\nme.png\nte.png\nhuku2.png\nhuhuu2.png\n@k0ara.png\n22.png\n\n\nMatCap用\na.png\nm.png\nh.png\nw.png\n\n\n・UnityPackageデータ\nAOI.unitypackage\n\nReadme.txt\n\n\n□利用規約\n・本モデルを使用した時点で、利用規約に同意したものとみなします。\n・色替えや改造、付属のメガネをほかモデルに装備するなど、ご自由にどうぞ。\n・VRC以外の媒体（ゲーム、アニメーション、アプリ）での使用も可能です\n・営利利用、収益化なども制限しません。\n・R-18・R-18Gへの利用は制限しませんが、住み分けはしっかり行ってください。\n\n□禁止事項\n\n・公序良俗、良識に反する使用。\n・政治、宗教的利用、他者、他団体を傷つけたり陥れる行為への使用。\n・自作発言\n・購入者以外の方がモデルデータを使用できる状態にすること\n（再配布、アバターペデスタル及びアバタークローン化など）\n\n□免責事項\n\n・本モデルを使用して発生したいかなる損害、損失、不利益に関して、\n　当方は一切の責任を負いません。\n\n\n□導入方法\n\n①Unity 2017.4.15f1で新規プロジェクトを作成。\n\n②VRCSDKとarktoon-shadersをインポートします。\n\n③同様に本データ付属のAOI.unitypackageをインポートします。\n\n④aoi.prepabをHierarchyに置き、VRCSDKを用いてアップロードをおこなってください。\n\n\n_________________________________________________________\n\nその他不明事項等、何かありましたらご連絡ください。\n\n製作者: 作成参謀\n\ntwitter: @sakuseisanbo\n","url":"https://booth.pm/ja/items/1266869","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/20bbf43f-f3fa-4bdf-b36d-12828e517996/i/1266869/fb720ecf-5eae-4a01-927d-c8dc2713f8bd_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RNNXDLSoSNoQoEtRjubE8FCUYTcmUNwv+GED1nhtVfY="></script>
+    nonce="Bhw73e/L8sYy/plWGNfHK9D/5+Hpn83yxTJBmuH8Pb8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -614,7 +592,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
